// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it transforms HTML img tags 1`] = `
"<a class=\\"gatsby-resp-image-link\\" href=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\" style=\\"display: block\\" target=\\"_blank\\" rel=\\"noopener\\">
          <span class=\\"gatsby-resp-image-wrapper\\" style=\\"position: relative; display: block; ; max-width: 600px; margin-left: auto; margin-right: auto;\\">
        <span class=\\"gatsby-resp-image-background-image\\" style=\\"padding-bottom: 100%; position: relative; bottom: 0; left: 0; background-image: url('data:image;'); background-size: cover; display: block;\\">
          <img class=\\"gatsby-resp-image-image\\" style=\\"width: 100%; height: 100%; margin: 0; vertical-align: middle; position: absolute; top: 0; left: 0; box-shadow: inset 0px 0px 0px 400px white;\\" alt=\\"quwowooybuqbl6ntboz3\\" title=\\"\\" src=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\" srcset=\\"srcSet\\" sizes=\\"128px,250px\\" loading=\\"lazy\\">
        </span>
      </span>
        </a>"
`;

exports[`it transforms images in markdown 1`] = `
"<a
          class=\\"gatsby-resp-image-link\\"
          href=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
          style=\\"display: block\\"
          target=\\"_blank\\"
          rel=\\"noopener\\"
        >
          <span
        class=\\"gatsby-resp-image-wrapper\\"
        style=\\"position: relative; display: block; ; max-width: 600px; margin-left: auto; margin-right: auto;\\"
      >
        <span
          class=\\"gatsby-resp-image-background-image\\"
          style=\\"padding-bottom: 100%; position: relative; bottom: 0; left: 0; background-image: url('data:image;'); background-size: cover; display: block;\\"
        >
          <img
        class=\\"gatsby-resp-image-image\\"
        style=\\"width: 100%; height: 100%; margin: 0; vertical-align: middle; position: absolute; top: 0; left: 0; box-shadow: inset 0px 0px 0px 400px white;\\"
        alt=\\"image\\"
        title=\\"\\"
        src=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
        srcset=\\"srcSet\\"
        sizes=\\"128px,250px\\"
        loading=\\"lazy\\"
      />
        </span>
      </span>
        </a>"
`;

exports[`it transforms images in markdown with webp srcSets if option is enabled 1`] = `
"<a
          class=\\"gatsby-resp-image-link\\"
          href=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
          style=\\"display: block\\"
          target=\\"_blank\\"
          rel=\\"noopener\\"
        >
          <span
        class=\\"gatsby-resp-image-wrapper\\"
        style=\\"position: relative; display: block; ; max-width: 600px; margin-left: auto; margin-right: auto;\\"
      >
        <span
          class=\\"gatsby-resp-image-background-image\\"
          style=\\"padding-bottom: 100%; position: relative; bottom: 0; left: 0; background-image: url('data:image;'); background-size: cover; display: block;\\"
        >
          <picture>
          <source
            srcset=\\"webpSrcSet\\"
            sizes=\\"128px,250px\\"
            type=\\"image/webp\\"
          />
          <source
            srcset=\\"srcSet\\"
            sizes=\\"128px,250px\\"
          />
          <img
            class=\\"gatsby-resp-image-image\\"
            style=\\"width: 100%; height: 100%; margin: 0; vertical-align: middle; position: absolute; top: 0; left: 0; box-shadow: inset 0px 0px 0px 400px white;\\"
            alt=\\"image\\"
            title=\\"\\"
            src=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
            loading=\\"lazy\\"
          />
        </picture>
        </span>
      </span>
        </a>"
`;

exports[`it transforms images with a https scheme in markdown 1`] = `
"<a
          class=\\"gatsby-resp-image-link\\"
          href=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
          style=\\"display: block\\"
          target=\\"_blank\\"
          rel=\\"noopener\\"
        >
          <span
        class=\\"gatsby-resp-image-wrapper\\"
        style=\\"position: relative; display: block; ; max-width: 600px; margin-left: auto; margin-right: auto;\\"
      >
        <span
          class=\\"gatsby-resp-image-background-image\\"
          style=\\"padding-bottom: 100%; position: relative; bottom: 0; left: 0; background-image: url('data:image;'); background-size: cover; display: block;\\"
        >
          <img
        class=\\"gatsby-resp-image-image\\"
        style=\\"width: 100%; height: 100%; margin: 0; vertical-align: middle; position: absolute; top: 0; left: 0; box-shadow: inset 0px 0px 0px 400px white;\\"
        alt=\\"image\\"
        title=\\"\\"
        src=\\"https://images.ctfassets.net/rocybtov1ozk/wtrHxeu3zEoEce2MokCSi/73dce36715f16e27cf5ff0d2d97d7dff/quwowooybuqbl6ntboz3.jpg\\"
        srcset=\\"srcSet\\"
        sizes=\\"128px,250px\\"
        loading=\\"lazy\\"
      />
        </span>
      </span>
        </a>"
`;
